@@ -29,6 +29,7 @@ class LogUploader(Thread, Component):
         # Note: we could make the following code a lot cleaner by doing a HTTP
         # PUT, but then we need to change the server side script which would
         # cause problems with backwards compatibility.
+        print("upload", filename)
         host, port = self.config()["science_server"].split(":")
         uri = '/cgi-bin/cgiupload.py'
         boundary = '%s%s_%s_%s' % \
@@ -57,6 +58,7 @@ class LogUploader(Thread, Component):
                                      query, headers)
         response = urllib.request.urlopen(req)
         html = str(response.read())
+        print(html)
         if "<pre>" in html:
             raise MnemosyneError(html)
 
